--- a/maipogrande/core/templates/core/base-inicial.html
+++ b/maipogrande/core/templates/core/base-inicial.html
@@ -60,7 +60,7 @@
                   href="{% url 'logout' %}" style="color: white;">Cerrar sesión</a>
               </li>
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-0 px-2 px-lg-3 rounded js-scroll-trigger small" style="color: white;">
+                <a class="nav-link py-0 px-2 px-lg-3 rounded js-scroll-trigger small mt-1" style="color: white;">
                   {{ request.user.first_name }}
               </a>
               </li>
