--- a/maipogrande/login/templates/login/login.html
+++ b/maipogrande/login/templates/login/login.html
@@ -7,11 +7,12 @@
 {% endblock %}
 
 {% block contenido %}
-  <form class="text-justify border border-light p-5" method="POST">
+<div class="container">
+  <form class="text-justify border border-light" method="POST">
     <p class="lead mb-4 px-5 text-center">
       Ingrese sus credenciales de inicio de sesión, luego presione el botón "Entrar".
     </p>
-    <div class="form-group col-4 text-center mx-auto" style="width: 400px;">
+    <div class="form-group col-xs-1 col-sm-4 text-center" style="margin-left:auto; margin-right:auto;">
     {% csrf_token %}
     {% if form.non.field.errors %}
       {{ form.non.field.errors }}
@@ -22,4 +23,5 @@
     <button type="submit" class="btn btn-success mt-3">Iniciar Sesión</button>
   </div>
   </form>
+</div>
 {% endblock %}
