--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <label class="font-weight-bold">Observación</label>
+                        <label class="font-weight-bold" style="vertical-align: top;">Observación</label>
                         {{ form.Observation }}
                     </div>
                 </div>
