--- a/maipogrande/transportista/templates/transportista/vehiculo-registrar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-registrar.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block contenido %}
-    <form class="text-justify border border-light p-5" method="post" id="vehicleForm">
+    <form class="text-justify border border-light" method="post" id="vehicleForm">
         <p class="lead text-center">
             Ingrese los datos de su vehículo, cuando este listo, pulse el botón "Grabar vehículo".
         </p>
@@ -15,7 +15,7 @@
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive mx-auto" style="width: 500px;">
+        <table class="tabla table-responsive" style="margin-left: auto; margin-right: auto;">
             {{ form }}
         </table>
         <div class="text-center">
