--- a/maipogrande/cexterno/templates/cexterno/home-externo.html
+++ b/maipogrande/cexterno/templates/cexterno/home-externo.html
@@ -7,13 +7,13 @@
 {% block menu %}
 <a class="enlace" href="{% url 'iniciarComercial' %}">Datos comerciales</a>
     <br><br>
-    <p class="text-justify text-center"><b>Ordenes de compra</b></p>
+    <a class="text-justify text-center"><b>Ordenes de compra</b></a>
+    <br>
     <a class="enlace" href="{% url 'listarOrdenes' %}">Lista de ordenes</a>
     <br>
     <a class="enlace" href="{% url 'registrarOrden' %}"> Nueva orden </a>
     <br>
     <a class="enlace" href="#"> Confirmar orden </a>
-
 {% endblock %}
 
 {% block contenido %}
