--- a/maipogrande/core/static/core/css/menu.css
+++ b/maipogrande/core/static/core/css/menu.css
@@ -12,3 +12,11 @@
   color: white;
   text-decoration: none;
 }
+
+.container-fluid {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
