--- a/maipogrande/transportista/templates/transportista/vehiculo-listar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-listar.html
@@ -7,22 +7,20 @@
 {% block contenido %}
     <!-- busqueda de vehiculos por patente -->
     <div class="row">
-        <div class="col col-6">
+        <div class="col-sm-6">
             <form class="form-inline my-2 my-lg-0" action="{% url 'listarVehiculos' %}" method="get" accept-charset="utf-8">
                 <label class="control-label" for="buscar">Patente del vehículo:</label>
                 <input name="q" class="form-control mr-sm-2" type="text" aria-label="buscar" value="">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Buscar </button>
             </form>
         </div>
-        <div class="col col-1"></div>
-        <div class="col col-2">
-            <a class="btn btn-secondary" 
-                href="{% url 'actualizarListaVehiculos' %}" role="button"> Actualizar lista</a>
-        </div>
-        <div class="col col-1"></div>
-        <div class="col col-2">
-            <a class="btn btn-primary" 
-                href="{% url 'registrarVehiculo' %}" role="button"> Nuevo vehículo </a>
+        <div class="col-sm-6">
+            <div style="display: flex;">
+                <a class="btn btn-secondary"
+                    href="{% url 'actualizarListaVehiculos' %}" role="button" style="margin-right: 20px;"> Actualizar lista</a>
+                <br>
+                <a class="btn btn-primary" href="{% url 'registrarVehiculo' %}" role="button"> Nuevo vehículo </a>
+            </div>
         </div>
     </div>
     <hr class="col-12">
