--- a/maipogrande/transportista/templates/transportista/despacho/despacho-listar.html
+++ b/maipogrande/transportista/templates/transportista/despacho/despacho-listar.html
@@ -1,8 +1,7 @@
 {% extends 'core/base-inicial.html' %}
-{% load static %}
 
 {% block titulo %}
-    Lista de subastas
+    Lista de despachos
 {% endblock %}
 
 {% block contenido %}
@@ -19,7 +18,7 @@
         <div class="col col-1"></div>
         <div class="col col-2">
             <a class="btn btn-secondary" 
-                href="{% url 'actualizarListaSubastas' %}" role="button"> Actualizar lista</a>
+                href="{% url 'actualizarListaDespachos' %}" role="button"> Actualizar lista</a>
         </div>
         <div class="col col-1"></div>
         <!-- <div class="col col-2">
@@ -30,30 +29,28 @@
     <hr class="col-12">
     
     <!-- Listando las ordenes de compra -->
-    {% if auction_list %}
+    {% if orderdispatch_list %}
         <table class="table table-hover table-striped mx-auto" style="width: 750px;">
             <thead>
                 <tr>
-                    <th>Subasta Nro.</th>
+                    <th>Orden Nro.</th>
                     <th>Fecha de inicio</th>
                     <th>Valor propuesto</th>
                     <th>Peso de la carga</th>
-                    <th>Fecha de término</th>
                     <th>Observación</th>
                 </tr>
             </thead>
             <tbody class="py-0">
-                {% for auction in auction_list %}
+                {% for dispatch in orderdispatch_list %}
                 <tr>
-                    <td class="text-right py-0">{{ auction.id }}</td>
-                    <td class="py-0">{{ auction.AuctionDate }}</td>
-                    <td class="py-0">{{ auction.Value }}</td>
-                    <td class="py-0">{{ auction.Weight }} kg</td>
-                    <td class="py-0">{{ auction.LimitDate }}</td>
-                    <td class="text-right py-0">{{ auction.Observation }}</td>
+                    <td class="text-right py-0">{{ dispatch.id }}</td>
+                    <td class="py-0">{{ dispatch.DispatchDate }}</td>
+                    <td class="py-0">{{ dispatch.DispatchValue }}</td>
+                    <td class="py-0">{{ dispatch.DispatchWeight }} kg</td>
+                    <td class="text-right py-0">{{ dispatch.Observation }}</td>
                     <td class="py-0">
                         <a class="btn btn-light" 
-                            href="{{ auction.get_participar_url }}" role="button"> Participar </a>
+                            href="{{ dispatch.get_cambiar_estado_url }}" role="button"> Ver Detalle </a>
                     </td>
                 </tr>
                 {% endfor %}
@@ -87,7 +84,7 @@
     <!-- Aqui parte la seccion cuando no hay nada ingresado -->
     {% else %}
         <p class="lead text-justify">
-            No hay subastas disponibles o 
+            No hay despachos disponibles o 
             la busqueda no produjo ningún resultado.<br>
         </p>
     {% endif %}
@@ -95,11 +92,7 @@
     <!-- volver a la pagina de inicio -->
     <br>
     <div class="text-center">
-    <a class="btn btn-secondary" href="#" role="button"> Volver página de inicio </a>
+    <a class="btn btn-secondary" href="{% url 'dinamicHome' %}" role="button"> Volver página de inicio </a>
     </div>
 
-{% endblock %}
-
-{% block jsBody %}
-    <script type="text/javascript" src="{% static 'core/js/transportista/subasta/subasta-listar.js' %}"></script>
 {% endblock %}
