responsive forms integration

--- a/maipogrande/core/templates/core/base.html
+++ b/maipogrande/core/templates/core/base.html
@@ -95,7 +95,7 @@
 		      </div>
 
           <!-- contenido -->
-          <div class="col col-sm-10 py-0 px-5" >
+          <div class="col col-sm-10 py-0 px-1 text-justify">
             {% block contenido %}
             {% endblock %}
           </div>
