--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -53,7 +53,7 @@
       <div class="col-md-8 mb-5">
         <h2>Participe activamente</h2>
         <hr>
-        <p class="small text-justify text-black">
+        <p class="text-justify text-black">
             Periodicamente  se realizan subastas para que 
             los pedidos de nuestros clientes sean entregados,
             en estassubasta de transporte,  todos los participantes pueden
