--- a/maipogrande/transportista/templates/transportista/vehiculo-editar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-editar.html
@@ -7,20 +7,22 @@
 {% endblock %}
 
 {% block contenido %}
-    <form class="text-justify border border-light p-5" method="post" id=vehicleForm>
-        <p class="lead text-center">
+<div class="container">
+    <form class="text-justify border border-light" method="post" id=vehicleForm>
+        <p class="lead mb-4 text-center">
             Actualice la información de su vehículo, cuando este listo, pulse el botón "Actualizar vehículo".
         </p>
+        <div class="form-group col-xs-1 col-sm-4 text-center" style="margin-left:auto; margin-right:auto;">
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive mx-auto" style="width: 540px;">
-            {{ form }}
-        </table>
+        {{ form|bootstrap }}
+        </div>
         <div class="text-center">
             <button type="submit" class="btn btn-success mt-3">Actualizar vehículo</button>
             <a class="btn btn-light mt-3" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
         </div>
     </form>
+</div>
 {% endblock %}
