--- a/maipogrande/dcomercial/templates/dcomercial/comercial-registrar.html
+++ b/maipogrande/dcomercial/templates/dcomercial/comercial-registrar.html
@@ -7,23 +7,24 @@
 {% endblock %}
 
 {% block contenido %}
+<div class="container">
     <form class="text-justify border border-light" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
-        <p class="lead text-center">
+        <p class="lead mb-4 text-center">
             Ingrese sus datos comerciales, cuando este listo, pulse el botón "Grabar".
         </p>
+        <div class="form-group col-xs-1 col-sm-4 text-center" style="margin-left:auto; margin-right:auto;">
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive mx-auto" style="width: 450px;">
-            {{ form }}
-        </table>
+        {{ form|bootstrap }}
+        </div>
         <div class="text-center">
             <button type="submit" class="btn btn-success mt-3">Grabar</button>
             <a class="btn btn-light mt-3" href="{% url 'dinamicHome' %}" role="button"> Cancelar </a>
         </div>
     </form>
-
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $("#id_Country").change(function () {
