--- a/maipogrande/productor/templates/productor/producto-editar.html
+++ b/maipogrande/productor/templates/productor/producto-editar.html
@@ -7,17 +7,17 @@
 {% endblock %}
 
 {% block contenido %}
-    <form class="text-justify border border-light p-5" method="post" id=productForm>
+    <form class="text-justify border border-light" method="post" id=productForm>
         <p class="lead text-center">
             Actualice su producto, cuando este listo, pulse el botón "Grabar".
         </p>
+        <div class="form-group col-xs-1 col-sm-4 text-center" style="margin-left:auto; margin-right:auto;">
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive mx-auto" style="width: 600px;">
-            {{ form }}
-        </table>
+        {{ form|bootstrap }}
+        </div>
         <div class="text-center">
             <button type="submit" class="btn btn-success mt-3">Actualizar producto</button>
             <a class="btn btn-light mt-3" href="{% url 'listarProductos' %}" role="button"> Cancelar </a>
