--- a/maipogrande/transportista/templates/transportista/subasta/subasta-pujar.html
+++ b/maipogrande/transportista/templates/transportista/subasta/subasta-pujar.html
@@ -102,7 +102,5 @@
 {% endblock %}
 
 {% block jsBody %}
-    <script type="text/javascript" src="{% static 'core/js/subasta-temporizador.js' %}"></script>
+    <script type="application/javascript" src="{% static 'core/js/transportista/subasta/subasta-pujar.js' %}"></script>
 {% endblock %}
-
-
