Cambios de recaptcha realizados correctamente.

--- a/maipogrande/contratos/templates/contratos/contrato-aceptar.html
+++ b/maipogrande/contratos/templates/contratos/contrato-aceptar.html
@@ -10,7 +10,7 @@
     <form class="text-justify border border-light p-5" method="post" id=contractForm>
         <p class="lead text-center">
             Si desea enviar una observación al aceptar su contrato, 
-            por favor ingrese este en la caja de observación y 
+            por favor ingrese este en la caja de observación,
             posteriormente presione el botón enviar. 
         </p>
         {% csrf_token %}
