--- a/maipogrande/contratos/templates/contratos/contrato-detalle.html
+++ b/maipogrande/contratos/templates/contratos/contrato-detalle.html
@@ -22,13 +22,13 @@
                     <td class="py-0">
                         <b>
                             {{ contract.Customername }}<br>
-                            Rut número : {{ contract.CustomerDNI}}
+                            Rut número : {{ contract.CustomerDni }}
                         </b>
                     </td>
                 </tr>
                 <tr>
                     <td class="py-0">Identificador del contrato</td>
-                    <td class="py-0"><b>{{ contract.ContractID }}</b></td>
+                    <td class="py-0"><b>{{ contract.ContractId }}</b></td>
                 </tr>
                 <tr>
                     <td class="py-0">Descripción del contrato</td>
