--- a/maipogrande/dcomercial/templates/dcomercial/comercial-ver.html
+++ b/maipogrande/dcomercial/templates/dcomercial/comercial-ver.html
@@ -18,7 +18,7 @@
                     <td>
                         {{ comercial.CompanyName }}<br>
                         "{{ comercial.FantasyName }}"<br>
-                        Rut/Dni: {{ comercial.ComercialDNI }}<br>
+                        Rut/Dni: {{ comercial.ComercialDni }}<br>
                         Giro: {{ comercial.ComercialBusiness }}
                     </td>
                 </tr>
