Agregada la app tasker para tareas en segundo plano.

--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -139,3 +139,15 @@
   <!-- /.container -->
 
 {% endblock %}
+
+{% block jsBody %}
+    <script>
+        $( document ).ready(function() {
+            // cargar contratos del transportista 
+            $.ajax({url: "{% url 'cargarContratos' %}",
+                success: function () { 
+                console.log('Contratos cargados...!!');}
+            });
+        });
+    </script>
+{% endblock %}
