--- a/maipogrande/core/templates/core/base-inicial.html
+++ b/maipogrande/core/templates/core/base-inicial.html
@@ -101,9 +101,9 @@
 
 
     <!-- carga de script -->
-    <script type="application/javascript" src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
-    <script type="application/javascript" src="{% static 'core/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script type="application/javascript" src="{% static 'core/vendor/popper/popper.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/popper/popper.min.js' %}"></script>
     {% block jsBody %}
     {% endblock %}
 
