--- a/maipogrande/core/templates/core/base.html
+++ b/maipogrande/core/templates/core/base.html
@@ -118,9 +118,9 @@
   </div>
 
     <!-- carga de script -->
-    <script type="application/javascript" src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
-    <script type="application/javascript" src="{% static 'core/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script type="application/javascript" src="{% static 'core/vendor/popper/popper.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/vendor/popper/popper.min.js' %}"></script>
     {% block jsBody %}
     {% endblock %}
 
