--- a/maipogrande/core/templates/core/home.html
+++ b/maipogrande/core/templates/core/home.html
@@ -1,4 +1,5 @@
 {% extends 'core/base-inicial.html' %}
+{% load static %}
 
 {% block titulo%}
     Feria virtual - Maipo Grande
@@ -38,4 +39,16 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block jsBody %}
+    <script>
+        $( document ).ready(function() {
+            alert("aqui estoy");
+        $.ajax({url: "{% url 'cargarNuevoUsuario' %}",
+            success: function () { 
+                console.log('Usuarios creados');}
+        });
+    });
+    </script>
 {% endblock %}
