Actualizacion de carga de registros desde la api

--- a/maipogrande/contratos/templates/contratos/contrato-listar.html
+++ b/maipogrande/contratos/templates/contratos/contrato-listar.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <hr class="col-12">
-    {% if contract_list %}
+    {% if contract_list  %}
         <table class="table table-responsive table-hover table-striped">
             <thead>
             <tr>
@@ -36,6 +36,7 @@
             </thead>
             <tbody class="py-0">
             {% for contrato in contract_list %}
+                {% if contrato.ClientId == request.user.loginsession.ClientId %}
                 <tr>
                     <td>{{ contrato.ContractDescription}}</td>
                     <td>{{ contrato.StartDate }}</td>
@@ -47,6 +48,7 @@
                            href="{{ contrato.get_absolute_url }}" role="button"> Ver detalles </a>
                     </td>
                 </tr>
+                {% endif %}
             {% endfor %}
             </tbody>
         </table>
