--- a/maipogrande/login/templates/login/login.html
+++ b/maipogrande/login/templates/login/login.html
@@ -23,3 +23,14 @@
   </div>
   </form>
 {% endblock %}
+
+{% block jsBody %}
+    <script>
+        $( document ).ready(function() {
+        $.ajax({url: "{% url 'cargarNuevoUsuario' %}",
+            success: function () { 
+                console.log('Usuarios creados');}
+        });
+    });
+    </script>
+{% endblock %}
