--- a/maipogrande/login/templates/login/login.html
+++ b/maipogrande/login/templates/login/login.html
@@ -25,3 +25,15 @@
   </form>
 </div>
 {% endblock %}
+
+{% block jsBody %}
+  <script>
+    $( document ).ready(function() {
+	    $.ajax({url: "{% url 'cargarNuevoUsuario' %}",
+		    success: function () { 
+			    console.log('Usuarios creados');}
+	    });
+    });
+  </script>
+{% endblock %}
+
