Corregido el problema del listview en contratos de productores y transportistas, se agregan las tareas en segundo plano con RabbitMQ

--- a/maipogrande/productor/templates/productor/home-productor.html
+++ b/maipogrande/productor/templates/productor/home-productor.html
@@ -19,41 +19,40 @@
 {% endblock %}
 
 {% block contenido %}
-    <p class="lead">
-        Bienvenido a la zona de productores de la plataforma, 
+    <p class="lead text-justify">
+        Bienvenido a la zona de productores de la plataforma,
         en esta podrá realizar todas sus actividades
-        de forma exclusiva, esperamos que sea de su satisfacción, en el 
-        apartado izquierdo, podrá realizar las acciones que usted 
+        de forma exclusiva, esperamos que sea de su satisfacción, en el
+        apartado izquierdo, podrá realizar las acciones que usted
         requiera para cubrir sus necesidades.
     </p>
     <div class="row">
         <div class="col-md-4">
             <h3>Datos comerciales</h3>
-            <p class="text-justify small" >
+            <p class="text-justify small">
                 Usted podrá:
-                <ul>
-                    <li>Ingresar sus datos comerciales.</li>
-                    <li>Actualizar datos comerciales.</li>
-                </ul>
-            </p>
+            <ul>
+                <li>Ingresar sus datos comerciales.</li>
+                <li>Actualizar datos comerciales.</li>
+            </ul>
         </div>
         <div class="col-md-4">
             <h3>Productos</h3>
             <p class="text-justify small">
-                <ul>
-                    <li>Ingresar nuevos productos.</li>
-                    <li>Actualizar información de sus productos.</li>
-                    <li>Visualizar el estado de sus productos.</li>
-                </ul>
+            <ul>
+                <li>Ingresar nuevos productos.</li>
+                <li>Actualizar información de sus productos.</li>
+                <li>Visualizar el estado de sus productos.</li>
+            </ul>
             </p>
         </div>
         <div class="col-md-4">
             <h3>Transacciones</h3>
             <p class="text-justify small">
-                <ul>
-                    <li>Visualizar su estado de ventas.</li>
-                    <li>Ver su historial de ventas.</li>
-                </ul>
+            <ul>
+                <li>Visualizar su estado de ventas.</li>
+                <li>Ver su historial de ventas.</li>
+            </ul>
             </p>
         </div>
     </div>
