--- a/maipogrande/productor/templates/productor/producto-detalle.html
+++ b/maipogrande/productor/templates/productor/producto-detalle.html
@@ -5,43 +5,43 @@
 {% endblock %}
 
 {% block contenido %}
-    <p class lead text-justify">
-        El detalle del producto se muestra en la tabla siguiente, cabe señalar que 
-        los valores indicados son aplicados según las medidas 
-        estandares del pais del productor, por lo tanto, 
+    <p class="lead text-justify">
+        El detalle del producto se muestra en la tabla siguiente, cabe señalar que
+        los valores indicados son aplicados según las medidas
+        estandares del pais del productor, por lo tanto,
         el valor esta expresado en dólares y el peso en kilogramos (KG).
     </p>
     <div class="table-responsive justify-content-center">
         <table class="table table-striped table-hover col-sm-2 border border-light text-justify text-black">
             <tbody>
-                <tr>
-                    <td class="py-0">Producto</td>
-                    <td class="py-0">{{ producto.ProductName }}</td>
-                </tr>
-                <tr>
-                    <td class="py-0">Categoría</td>
-                    <td class="py-0">{{ producto.Category.CategoryName }}</td>
-                </tr>
-                <tr>
-                    <td class="py-0">Valor del kilogramo<br>Expresado en dolares</td>
-                    <td class="py-0">${{ producto.ProductValue }}</td>
-                </tr>
-                <tr>
-                    <td class="py-0">Cantidad puesta a la venta<br>(en kilogramos (KG))</td>
-                    <td class="py-0">{{ producto.ProductQuantity }} (KG)</td>
-                </tr>
-                <tr>
-                    <td class="py-0">Observaciones del producto</td>
-                    <td class="py-0">{{ producto.Observation }}</td>
-                </tr>
+            <tr>
+                <td class="py-0">Producto</td>
+                <td class="py-0">{{ producto.ProductName }}</td>
+            </tr>
+            <tr>
+                <td class="py-0">Categoría</td>
+                <td class="py-0">{{ producto.Category.CategoryName }}</td>
+            </tr>
+            <tr>
+                <td class="py-0">Valor del kilogramo<br>Expresado en dolares</td>
+                <td class="py-0">${{ producto.ProductValue }}</td>
+            </tr>
+            <tr>
+                <td class="py-0">Cantidad puesta a la venta<br>(en kilogramos (KG))</td>
+                <td class="py-0">{{ producto.ProductQuantity }} (KG)</td>
+            </tr>
+            <tr>
+                <td class="py-0">Observaciones del producto</td>
+                <td class="py-0">{{ producto.Observation }}</td>
+            </tr>
             </tbody>
         </table>
     </div>
     <br>
-    <a class="btn btn-primary" 
-        href="{{ producto.get_update_url }}" role="button"> Actualizar producto </a>
-    <a class="btn btn-danger" 
-        href="{{ producto.get_delete_url }}" role="button"> Eliminar producto </a>
+    <a class="btn btn-primary"
+       href="{{ producto.get_update_url }}" role="button"> Actualizar producto </a>
+    <a class="btn btn-danger"
+       href="{{ producto.get_delete_url }}" role="button"> Eliminar producto </a>
     <a class="btn btn-success"
-        href="{% url 'listarProductos' %}" role="button"> Volver </a>
+       href="{% url 'listarProductos' %}" role="button"> Volver </a>
 {% endblock %}
