--- a/maipogrande/productor/templates/productor/producto-registrar.html
+++ b/maipogrande/productor/templates/productor/producto-registrar.html
@@ -7,19 +7,20 @@
 {% endblock %}
 
 {% block contenido %}
-    <form class="text-justify border border-light" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
+    <form class="text-justify border border-light" method="post" id="comercialForm"
+          urlCiudades="{% url 'cargarCiudades' %}">
         <p class="lead text-center">
             Ingrese los datos de su producto, cuando este listo, pulse el botón "Grabar".
         </p>
         <div class="form-group col-xs-1 col-sm-4 text-center" style="margin-left:auto; margin-right:auto;">
-        {% csrf_token %}
-        {% if form.non.field.errors %}
-            {{ form.non.field.errors }}
-        {% endif %}
-        {{ form|bootstrap }}
+            {% csrf_token %}
+            {% if form.non.field.errors %}
+                {{ form.non.field.errors }}
+            {% endif %}
+            {{ form|bootstrap }}
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-success mt-3"> Grabar producto </button>
+            <button type="submit" class="btn btn-success mt-3"> Grabar producto</button>
             <a class="btn btn-light mt-3" href="{% url 'listarProductos' %}" role="button"> Cancelar </a>
         </div>
     </form>
